// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/VehicleResults/VehicleResult/ViolationsInspector/ViolationsListControls ListHiddenWithAtLeastOneViolation smoke-test 1`] = `
<div class="container-fluid">
  <div class="row">
    <div class="col-md-12">
      <div class="vehicles">
        <div class="vehicle card">
          <ul class="list-group-flush list-group">
            <li class="list-group-item">
              <div class="violations-table-wrapper">
                <div class="violations-table-header"
                     data-testid="vehicle-violations-controls"
                >
                  <div class="row">
                    <div class="d-grid gap-2 ">
                      <button aria-controls="violations-table-e5f6g7h8"
                              aria-expanded="false"
                              class="btn btn-block w-100 btn-outline-primary"
                              type="button"
                      >
                        show 1 violation
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components/VehicleResults/VehicleResult/ViolationsInspector/ViolationsListControls ListVisibleWithFullViolationTextAndFullFines smoke-test 1`] = `
<div class="container-fluid">
  <div class="row">
    <div class="col-md-12">
      <div class="vehicles">
        <div class="vehicle card">
          <ul class="list-group-flush list-group">
            <li class="list-group-item">
              <div class="violations-table-wrapper">
                <div class="violations-table-header"
                     data-testid="vehicle-violations-controls"
                >
                  <div class="row">
                    <div class="d-grid gap-2 d-md-flex justify-content-md-between">
                      <button aria-controls="violations-table-e5f6g7h8"
                              aria-expanded="false"
                              class="btn btn-block w-100 btn-outline-primary"
                              type="button"
                      >
                        hide violations
                      </button>
                      <button class="btn btn-outline-primary btn-block w-100"
                              type="button"
                      >
                        show fines summary
                      </button>
                      <button class="btn btn-outline-primary btn-block w-100"
                              type="button"
                      >
                        show violation summary
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components/VehicleResults/VehicleResult/ViolationsInspector/ViolationsListControls ListVisibleWithFullViolationTextAndSummaryFines smoke-test 1`] = `
<div class="container-fluid">
  <div class="row">
    <div class="col-md-12">
      <div class="vehicles">
        <div class="vehicle card">
          <ul class="list-group-flush list-group">
            <li class="list-group-item">
              <div class="violations-table-wrapper">
                <div class="violations-table-header"
                     data-testid="vehicle-violations-controls"
                >
                  <div class="row">
                    <div class="d-grid gap-2 d-md-flex justify-content-md-between">
                      <button aria-controls="violations-table-e5f6g7h8"
                              aria-expanded="false"
                              class="btn btn-block w-100 btn-outline-primary"
                              type="button"
                      >
                        hide violations
                      </button>
                      <button class="btn btn-outline-primary btn-block w-100"
                              type="button"
                      >
                        show fines details
                      </button>
                      <button class="btn btn-outline-primary btn-block w-100"
                              type="button"
                      >
                        show violation summary
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components/VehicleResults/VehicleResult/ViolationsInspector/ViolationsListControls ListVisibleWithViolationIconsAndFullFines smoke-test 1`] = `
<div class="container-fluid">
  <div class="row">
    <div class="col-md-12">
      <div class="vehicles">
        <div class="vehicle card">
          <ul class="list-group-flush list-group">
            <li class="list-group-item">
              <div class="violations-table-wrapper">
                <div class="violations-table-header"
                     data-testid="vehicle-violations-controls"
                >
                  <div class="row">
                    <div class="d-grid gap-2 d-md-flex justify-content-md-between">
                      <button aria-controls="violations-table-e5f6g7h8"
                              aria-expanded="false"
                              class="btn btn-block w-100 btn-outline-primary"
                              type="button"
                      >
                        hide violations
                      </button>
                      <button class="btn btn-outline-primary btn-block w-100"
                              type="button"
                      >
                        show fines summary
                      </button>
                      <button class="btn btn-outline-primary btn-block w-100"
                              type="button"
                      >
                        show full violation
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components/VehicleResults/VehicleResult/ViolationsInspector/ViolationsListControls ListVisibleWithViolationIconsAndSummaryFines smoke-test 1`] = `
<div class="container-fluid">
  <div class="row">
    <div class="col-md-12">
      <div class="vehicles">
        <div class="vehicle card">
          <ul class="list-group-flush list-group">
            <li class="list-group-item">
              <div class="violations-table-wrapper">
                <div class="violations-table-header"
                     data-testid="vehicle-violations-controls"
                >
                  <div class="row">
                    <div class="d-grid gap-2 d-md-flex justify-content-md-between">
                      <button aria-controls="violations-table-e5f6g7h8"
                              aria-expanded="false"
                              class="btn btn-block w-100 btn-outline-primary"
                              type="button"
                      >
                        hide violations
                      </button>
                      <button class="btn btn-outline-primary btn-block w-100"
                              type="button"
                      >
                        show fines details
                      </button>
                      <button class="btn btn-outline-primary btn-block w-100"
                              type="button"
                      >
                        show full violation
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components/VehicleResults/VehicleResult/ViolationsInspector/ViolationsListControls NoViolations smoke-test 1`] = `
<div class="container-fluid">
  <div class="row">
    <div class="col-md-12">
      <div class="vehicles">
        <div class="vehicle card">
          <ul class="list-group-flush list-group">
            <li class="list-group-item">
              <div class="violations-table-wrapper">
                <div class="violations-table-header"
                     data-testid="vehicle-violations-controls"
                >
                  <div class="row">
                    <div class="d-grid gap-2 ">
                      <button aria-controls="violations-table-e5f6g7h8"
                              aria-expanded="false"
                              class="btn btn-block w-100 btn-outline-secondary"
                              disabled
                              type="button"
                      >
                        no violations
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;
